# grind

./: .gitignore  .markdown-link-check.json  LICENSE.md  README.md  cspell.yaml  flake.nix  justfile
.helix/: config.toml  languages.toml
scripts/flake/: dev.nix  grind.nix  rust.nix
src/aoc-2024-day-01/: Cargo.toml  README.md
src/aoc-2024-day-01/src/: main.rs
src/aoc-2024-day-02/: Cargo.toml  README.md
src/aoc-2024-day-02/src/: main.rs
src/aoc-2024-day-03/: Cargo.toml  README.md
src/aoc-2024-day-03/src/: main.rs
src/aoc-2024-day-04/: Cargo.toml  README.md
src/aoc-2024-day-04/src/: main.rs
src/aoc-2024-day-05/: Cargo.toml  README.md
src/aoc-2024-day-05/src/: main.rs
src/aoc-2024-day-06/: Cargo.toml  README.md
src/aoc-2024-day-06/src/: main.rs
src/aoc-2024-day-07/: Cargo.toml  README.md
src/aoc-2024-day-07/src/: main.rs
src/aoc-2024-day-08/: Cargo.toml  README.md  cspell.yaml
src/aoc-2024-day-08/src/: main.rs
src/aoc-2024-day-09/: Cargo.toml  README.md
src/aoc-2024-day-09/src/: main.rs
src/aoc-2024-day-10/: Cargo.toml  README.md  cspell.yaml
src/aoc-2024-day-10/src/: main.rs
src/aoc-2024-day-11/: Cargo.toml  README.md
src/aoc-2024-day-11/src/: main.rs
src/aoc-2024-day-12/: Cargo.toml  README.md
src/aoc-2024-day-12/src/: main.rs
src/aoc-2024-day-13/: Cargo.toml  README.md
src/aoc-2024-day-13/src/: main.rs
src/aoc-2024-day-14/: Cargo.toml  README.md
src/aoc-2024-day-14/src/: main.rs
src/aoc-2024-day-15/: Cargo.toml  README.md
src/aoc-2024-day-15/src/: main.rs
src/aoc-2024-day-16/: Cargo.toml  README.md
src/aoc-2024-day-16/src/: main.rs
src/aoc-2025-day-01/: Cargo.toml  README.md
src/aoc-2025-day-01/src/: main.rs
src/aoc-2025-day-02/: Cargo.toml  README.md
src/aoc-2025-day-03/: Cargo.toml  README.md  cspell.yaml
src/aoc-2025-day-04/: Cargo.toml  README.md
src/aoc-2025-day-05/: Cargo.toml  README.md
src/aoc-2025-day-06/: Cargo.toml  README.md
src/aoc-2025-day-06/src/: main.rs
src/aoc-2025-day-07/: Cargo.toml  README.md  cspell.yaml
src/aoc-2025-day-08/: Cargo.toml  README.md
src/aoc-2025-day-09/: Cargo.toml  README.md
src/aoc-2025-day-10/: Cargo.toml  README.md
(+8 files in other folders)
