[package]
name = "aoc-2024-day-03"
version = "0.1.0"
description = "Advent of Code 2024 day 3 solution"
repository = "https://gitlab.com/haras-unicorn/grind"
authors = ["haras-unicorn <github@haras-unicorn.net>"]
license = "MIT"
readme = "README.md"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.89", features = ["backtrace"] }
lazy_static = "1.5.0"
regex = "1.11.1"
