[package]
name = "aoc-2024-day-09"
version = "0.1.0"
description = "Advent of Code 2024 day 9 solution"
repository = "https://gitlab.com/haras-unicorn/grind"
authors = ["haras-unicorn <github@haras-unicorn.net>"]
license = "MIT"
readme = "README.md"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.89", features = ["backtrace"] }
enum-as-inner = "0.6.1"
itertools = "0.13.0"
num-bigint = "0.4.6"
